wip: graph structure

--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -5,3 +5,35 @@ month = {03},
 pages = {},
 title = {A Comparison of Parallel Graph Coloring Algorithms}
 }
+
+@Article{Shen2017,
+author="Shen, Fengxian
+and Jian, Xu
+and Xi, Xianjie",
+title="Implementation of graphic vertex-coloring parallel synthesis algorithm based on genetic algorithm and compute unified device architecture",
+journal="Automatic Control and Computer Sciences",
+year="2017",
+month="Jan",
+day="01",
+volume="51",
+number="1",
+pages="32--41",
+abstract="Graphic vertex-coloring has long been a classical problem for combinatorial optimization in the field of science and technology. No algorithm can give an optimal solution for graphic vertex-coloring in polynomial time so far, though it plays an important role in the field of mathematical science and technology. Hence the problem has always been a non-deterministic polynomial (NP) complete problem. The current computer parallel technology based on compute unified device architecture (CUDA) is a hot spot in the relevant field. This study put forward a method integrating parallel genetic algorithm and CUDA to solve the problem of graphic vertex-coloring. First, color sequences were coded and parallel genetic operators were designed, which was beneficial to the improvement of algorithm efficacy. Then parallelization reformation was performed on the above integrated algorithm using CUDA. Experimental results demonstrated that, the newly developed algorithm improved the calculation efficiency and reduced the computation time compared to traditional algorithms based on central processing unit (CPU). Thus plenty of cases can be effectively solved if the minimum coloring number of a known graphics is found.",
+issn="1558-108X",
+doi="10.3103/S0146411617010060",
+url="https://doi.org/10.3103/S0146411617010060"
+}
+
+@article{SINGH20155,
+title = "Implementation of K-shortest Path Algorithm in GPU Using CUDA",
+journal = "Procedia Computer Science",
+volume = "48",
+pages = "5 - 13",
+year = "2015",
+note = "International Conference on Computer, Communication and Convergence (ICCC 2015)",
+issn = "1877-0509",
+doi = "https://doi.org/10.1016/j.procs.2015.04.103",
+url = "http://www.sciencedirect.com/science/article/pii/S1877050915006122",
+author = "Avadhesh Pratap Singh and Dhirendra Pratap Singh",
+keywords = "Compute Unified Device Architecture (CUDA), Graphical Processing Unit (GPU), Shortest path Algorithm, Parallel Algorithm."
+}
