--- a/docs/sprawozdanie.tex
+++ b/docs/sprawozdanie.tex
@@ -137,6 +137,7 @@
 	Dla grafów nieskierowanych stopniem wierzchołka będzie liczba wszystkich incydentnych krawędzi, a tym samym różnica między $i$ i $i+1$ wartością w tablicy wierzchołków. Wartość losowa może zostać wylosowana i przydzielona raz, na początku działania programu. Lista zakazanych kolorów może zostać zastąpiona całkowitą liczbą naturalną oznaczającą następny kolor do wykorzystania (zakładając, że rozpoczynamy od ,,koloru'' 0, a następne określamy przez inkrementację). Parametry te można utożsamić z wierzchołkami przy wykorzystaniu funkcji \texttt{nvgraphAllocateVertexData} oraz \texttt{nvgraphSetVertexData}.
 	
 	\section{Projekty testów}
+	Poprawność obu implementacji algorytmu będzie sprawdzana przez dodatkowo zaimplementowaną funkcję, dla wszystkich grafów, na których wykonywane będzie kolorowanie. Zarówno dla wyniku działania implementacji sekwencyjnej jak i równoległej algorytmu, funkcja sprawdzi każdy wierzchołek grafu oraz jego sąsiadów. Jeżeli znalezione zostaną jakiekolwiek dwa sąsiadujące ze sobą wierzchołki, które zostały pokolorowane na ten sam kolor oznaczać to będzie błędną implementację oraz konieczność jej poprawienia. Działanie algorytmu sekwencyjnego i równoległego przetestowane zostanie na grafach dostępnych w internecie między innymi na stronie \textit{http://mat.gsia.cmu.edu/COLOR/instances.html}. Testowanie przeprowadzone zostanie dla grafów o liczbie wierzchołków rzędu od kilkudziesiąt do tysiąca, oraz liczbie krawędzi rzędu od kilkudziesiąt do kilkuset tysięcy (jeśli moc obliczeniowa sprzętu podoła takiej ich liczbie). Implementacje porównywane będą ze względu na czas znalezienia rozwiązania oraz liczbę użytych w rozwiązaniu kolorów. Dodatkowo implementacja równoległa sprawdzona zostanie na dwóch kartach graficznych: GForce 920M oraz GForce GT 525M.
 	\section{Założenia programu}
 	
 	\bibliography{bibliografia}
