--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -37,3 +37,11 @@ url = "http://www.sciencedirect.com/science/article/pii/S1877050915006122",
 author = "Avadhesh Pratap Singh and Dhirendra Pratap Singh",
 keywords = "Compute Unified Device Architecture (CUDA), Graphical Processing Unit (GPU), Shortest path Algorithm, Parallel Algorithm."
 }
+
+@Book{ gis, 
+author = "Wojciechowski, Jacek and Pieńkosz, Krzysztof", 
+editor = "", 
+title = "Grafy i sieci", 
+publisher = "Wydawnictwo Naukowe PWN", 
+year = 2013, 
+address = "Warszawa", } 
